[3618] Remove Optional used as a type
Signed-off-by: Matthieu SAUR <matthieu.saur@rte-france.com>