@@ -34,7 +34,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
 
     private double maxP;
 
-    private Optional<VoltageRegulationImpl> voltageRegulation;
+    private VoltageRegulationImpl voltageRegulation;
 
     BatteryImpl(Ref<NetworkImpl> ref, String id, String name, boolean fictitious, double targetP, double targetQ, double minP, double maxP) {
         super(ref, id, name, fictitious);
@@ -152,7 +152,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public TerminalExt getTerminal() {
-        return terminals.get(0);
+        return terminals.getFirst();
     }
 
     /**
@@ -184,7 +184,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public ReactiveCapabilityCurveAdder newReactiveCapabilityCurve() {
-        return new ReactiveCapabilityCurveAdderImpl(this);
+        return new ReactiveCapabilityCurveAdderImpl<>(this);
     }
 
     /**
@@ -192,7 +192,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public MinMaxReactiveLimitsAdder newMinMaxReactiveLimits() {
-        return new MinMaxReactiveLimitsAdderImpl(this);
+        return new MinMaxReactiveLimitsAdderImpl<>(this);
     }
 
     /**
@@ -207,7 +207,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
             targetP.add(targetP.get(sourceIndex));
             targetQ.add(targetQ.get(sourceIndex));
         }
-        this.voltageRegulation.ifPresent(vr -> vr.extendVariantArraySize(initVariantArraySize, number, sourceIndex));
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.extendVariantArraySize(initVariantArraySize, number, sourceIndex));
     }
 
     /**
@@ -218,7 +218,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
         super.reduceVariantArraySize(number);
         targetP.remove(targetP.size() - number, number);
         targetQ.remove(targetQ.size() - number, number);
-        this.voltageRegulation.ifPresent(vr -> vr.reduceVariantArraySize(number));
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.reduceVariantArraySize(number));
     }
 
     /**
@@ -231,12 +231,16 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
             targetP.set(index, targetP.get(sourceIndex));
             targetQ.set(index, targetQ.get(sourceIndex));
         }
-        this.voltageRegulation.ifPresent(vr -> vr.allocateVariantArrayElement(indexes, sourceIndex));
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.allocateVariantArrayElement(indexes, sourceIndex));
     }
 
     @Override
     public VoltageRegulation getVoltageRegulation() {
-        return this.voltageRegulation.orElse(null);
+        return this.voltageRegulation;
+    }
+
+    public Optional<VoltageRegulationImpl> getOptionalVoltageRegulation() {
+        return Optional.ofNullable(this.voltageRegulation);
     }
 
     @Override
@@ -246,13 +250,13 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
 
     @Override
     public void removeVoltageRegulation() {
-        this.voltageRegulation.ifPresent(vr -> vr.setTerminal(null));
-        this.voltageRegulation = Optional.empty();
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.setTerminal(null));
+        this.voltageRegulation = null;
     }
 
     @Override
     public void setVoltageRegulation(VoltageRegulation voltageRegulation) {
-        this.voltageRegulation = Optional.ofNullable((VoltageRegulationImpl) voltageRegulation);
+        this.voltageRegulation = (VoltageRegulationImpl) voltageRegulation;
     }
 
     @Override
